--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             right: 0;
         }
     </style>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">-->
     <script src="js/d3.v4.min.js"></script>
     <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <!--<script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
 </head>
 
 <body>
@@ -319,6 +319,7 @@
             .attr("r", function (node) {
                 return node.weight;
             })
+            .attr("selected", 0)
             .call(d3.drag()
                 .on("start", dragstarted)
                 .on("drag", dragged)
@@ -398,6 +399,7 @@
             .attr("height", function (node) {
                 return node.weight;
             })
+            .attr("selected", 0)
             .call(d3.drag()
                 .on("start", dragstarted)
                 .on("drag", dragged)
@@ -636,8 +638,7 @@
                 .attr("r", function (node) {
                     return node.weight;
                 })
-                .attr("x", 800)
-                .attr("y", 600)
+                .attr("selected", 0)
                 .merge(svg_circlenodes).call(d3.drag()
                     .on("start", dragstarted)
                     .on("drag", dragged)
@@ -718,8 +719,7 @@
                 .attr("height", function (node) {
                     return node.weight;
                 })
-                .attr("x", 800)
-                .attr("y", 600)
+                .attr("selected", 0)
                 .merge(svg_rectnodes).call(d3.drag()
                     .on("start", dragstarted)
                     .on("drag", dragged)
@@ -821,7 +821,6 @@
                     ids.push(element.id);
                 }
             });
-            console.log(id);
             svg_rectnodes
                 .style("opacity", function (node) {
                     if (ids.indexOf(node.id) >= 0) {
@@ -1300,7 +1299,6 @@
                 }
             }
             nodes3 = tmpnodes3;
-            console.log(nodes3);
             links3 = links3.filter(line => (ids.indexOf(line.source) >= 0 && ids.indexOf(line.target) >= 0));
             if (document.getElementById("force")) {
                 which = 1;
