--- a/index.html
+++ b/index.html
@@ -1396,6 +1396,9 @@
                 which = 2;
                 $("#character").remove();
             }
+            if (document.getElementById("relation")) {
+                $("#relation").remove();
+            }
             $("#box").append("<svg id='relation'></svg>");
             var width3 = 800;
             var height3 = 500;
