modified how to judge the status

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
 </body>
 <script type="text/javascript">
     var progress = 0;
+    //0暂停，1播放
+    var status = 0;
     var timerID;
     var json = new Object();
     var chapters = new Array();
@@ -212,9 +214,10 @@
             .attr("fill", d3.hsl(206, charNumArray[0] / maxCharNum, 0.5).toString());
         d3.select('#startButton')
             .on("click", function (d, i) {
-                var status = document.getElementById(this.id).className;
+                //var status = document.getElementById(this.id).className;
                 //开始推进
-                if (status == "btn btn-primary btn-sm") {
+                if (status == 0) {
+                    status = 1;
                     d3.select('#startButton')
                         .attr("class", "btn btn-danger btn-sm")
                         .text("暂停");
@@ -235,7 +238,9 @@
                             alert("已到结局！");
                             clearInterval(timerID);
                             d3.select('#startButton')
+                                .attr("class", "btn btn-primary btn-sm")
                                 .text("重来");
+                            status = 0;
                         }
                         else {
                             d3.selectAll('.progressBarRect')
@@ -254,6 +259,7 @@
                     }, 1000);
                 }
                 else {
+                    status = 0;
                     if (progress == bookLen + 1) {
                         if (document.getElementById("force")) {
                             $("#force").remove();
@@ -280,7 +286,7 @@
                 //console.log(this.id);
                 //console.log(d);
                 var status = document.getElementById('startButton').className;
-                if (status == "btn btn-danger btn-sm") {
+                if (status == 1) {
                     alert("请在暂停状态下查看每章详情！");
                 }
                 else {
